still got issues :(

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 <body>
-    <h1>Discord Bot Dashboard</h1>
+    <h1>Bucket</h1>
     <div id="botInfo">
         <div class="counter">Total Pings: <span id="totalPings">0</span></div>
         <div class="counter">Blocked Words: <span id="blockedWordsCount">0</span></div>
