whoops ui fixed again

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
                                 <div class="container alert frostedglass noselect">
                                     <div id="botInfo">
                                         <p class="runguszone text-center fs-3 mb-n">API Status</p>
-                                        <p class="text-center fs-4"><span class="badge bg-danger noselect">not implemented</span></p>
+                                        <p class="text-center fs-4"><span class="badge bg-warning noselect">not implemented</span></p>
                                         <hr class="m-0">
                                         <p class="runguszone text-center fs-4 lead mb-n">
                                             Discord: <span id="discordstatus"><span class="badge bg-info"><span class="spinner-border spinner-border-sm" role="status"></span></span>
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="container alert frostedglass">
                                     <p class="lead text-center runguszone fs-3 noselect">Latest Error:</p>
-                                    <!-- <div id="errorContainer"><p class="text-center fs-4"><span class="badge bg-warning noselect">not implemented</span></p></div> -->
+                                    <div id="errorContainer"><p class="text-center fs-4"><span class="badge bg-success noselect">none!</span></p></div>
                                 </div>
                             </div>
                             <div class="col-7">
